--- a/src/app/main/contract/contract.component.html
+++ b/src/app/main/contract/contract.component.html
@@ -1,4 +1,8 @@
-<p-selectButton *ngIf="filter_status!=40" [options]="stateOptions" [(ngModel)]="isOrg" optionLabel="label" optionValue="value" (click)="changeTab()"></p-selectButton>
+<p-selectButton *ngIf="filter_status!=40" [options]="stateOptions" [(ngModel)]="isOrg" optionLabel="label" optionValue="value" (click)="changeTab()">
+    <ng-template #options let-item>
+        <span style="margin: auto;width: 50%;">{{item.label | translate}}</span>
+    </ng-template>
+</p-selectButton>
 
 <!--Truong hop dang xu ly va sap het han-->
 <div *ngIf="(this.filter_status == 20 || this.filter_status == 33) && this.isOrg == 'off'" class="col-md-4" class="container-fluid">
@@ -33,7 +37,7 @@
                                 <div class="item_contract_name" (click)="isQLHD_07?openDetail(item.id):null">{{item.name}}</div>
 
                                 <div class="row" *ngFor="let itemPar of sortParticipant(item.participants); let index = index">
-                                    <div class="item_contract_infor">Bên {{getNameOrganization(itemPar, index)}}</div>
+                                    <div class="item_contract_infor">{{'side' | translate}} {{getNameOrganization(itemPar, index)}}</div>
                                 </div>
 
                                 <div class="row">
@@ -153,7 +157,7 @@
                                 <div class="item_contract_name" (click)="isQLHD_07?openDetail(item.id):null">{{item.name}}</div>
 
                                 <div class="row" *ngFor="let itemPar of sortParticipant(item.participants); let index = index">
-                                    <div class="item_contract_infor">Bên {{getNameOrganization(itemPar, index)}}</div>
+                                    <div class="item_contract_infor">{{'side' | translate}} {{getNameOrganization(itemPar, index)}}</div>
                                 </div>
 
                                 <div class="row">
