--- a/src/app/main/user/user.component.html
+++ b/src/app/main/user/user.component.html
@@ -18,7 +18,7 @@
       <button *ngIf="isQLND_01" class="btn btn-lg btn-block btn_submit" (click)="addUser()">{{'btn.add' | translate }}</button>
       <input *ngIf="isQLND_01" id="file-input" type="file" accept=".xls,.xlsx" (change)="fileChanged($event)"/>
 
-      Bạn chưa có file mẫu? <a href="/assets/upload/import_nguoi_dung.xlsx" style="color: #106DB6; cursor: pointer;" (click)="downFileExample()">Tải file mẫu</a>
+      {{'not.have.sample.file' | translate}} <a href="/assets/upload/import_nguoi_dung.xlsx" style="color: #106DB6; cursor: pointer;" (click)="downFileExample()">{{'download.sample.file' | translate}}</a>
     </div>
   </div>
 
@@ -37,7 +37,11 @@
               <td>{{list.email}}</td>
               <td>{{list.phone}}</td>
               <td>{{list.organization.name}}</td>
-              <td>{{list.status==1?'Hoạt động':'Không hoạt động'}}</td>
+              <!-- <td>{{list.status==1?'Hoạt động':'Không hoạt động'}}</td> -->
+
+              <td *ngIf="list.status == 1">{{'unit.active' | translate}}</td>
+              <td *ngIf="list.status != 1">{{'unit.inactive' | translate}}</td>
+
               <td>{{list.role?.name}}</td>
               <td style="text-align: center">
                 <img *ngIf="isQLND_02" src="../../../assets/img/icon_edit.svg" width="20px" (click)="editUser(list.id)" style="cursor: pointer;"/>
