--- a/src/app/main/contract/contract.component.html
+++ b/src/app/main/contract/contract.component.html
@@ -17,7 +17,7 @@
 
         <div>
             <div class="col-md-1 btn_search" style="padding-top: 10px;">
-                <button (click)="cancelMany()" class="btn btn-lg btn-block btn_submit">{{'Huỷ'| translate}}</button>
+                <button (click)="cancelMany()" class="btn btn-lg btn-block btn_submit">{{'cancel'| translate}}</button>
             </div>
         </div>
 
