--- a/src/app/main/contract-signature/contract-signature.component.html
+++ b/src/app/main/contract-signature/contract-signature.component.html
@@ -13,8 +13,8 @@
         </div>
 
         <div *ngIf="this.typeDisplay === 'signMany'" style="padding-top: 10px;">
-            <button class="btn_submit" (click)="signManyContract()">{{'Ký'| translate}}</button>
-            <button class="btn_submit" (click)="cancelSignMany()">{{'Huỷ'| translate}}</button>
+            <button class="btn_submit" (click)="signManyContract()">{{'contract.sign'| translate}}</button>
+            <button class="btn_submit" (click)="cancelSignMany()">{{'cancel'| translate}}</button>
         </div>
     </div>
 
@@ -74,7 +74,12 @@
                                 <!--user.sign-type-->
                                 <div class="row">
                                     <div *ngIf="this.filter_status === 1" class="col-md-11 item_contract_infor">{{'user.sign-type' | translate}}:
-                                        <span class="status_blue">{{item.typeOfSign}}</span>
+                                        <span *ngIf="item.sign_type.length > 0 && item.sign_type[0].id == 1" class="status_blue">{{'sign_by_otp' | translate}}</span>
+                                        <span *ngIf="item.sign_type.length > 0 && item.sign_type[0].id == 2" class="status_blue">{{'sign_by_token' | translate}}</span>
+                                        <span *ngIf="item.sign_type.length > 0 && item.sign_type[0].id == 3" class="status_blue">{{'sign_by_pki' | translate}}</span>
+                                        <span *ngIf="item.sign_type.length > 0 && item.sign_type[0].id == 4" class="status_blue">{{'sign_by_hsm' | translate}}</span>
+                                        <span *ngIf="item.sign_type.length > 0 && item.sign_type[0].id == 5" class="status_blue">{{'sign_by_eKYC' | translate}}</span>
+                                        <span *ngIf="item.sign_type.length == 0 && item.role == 1" class="status_blue">{{'contract.lead' | translate}}</span>
                                     </div>
                                 </div>
                             </div>
