--- a/src/app/main/contract-template/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract-template/shared/model/determine-signer/determine-signer.component.html
@@ -73,10 +73,28 @@
                             (click)="onSelectName(t, d)">{{t.name}} ({{t.email}})
                     </button>
                   </div>
-
                 </div>
            
-                <div class="participants__name" *ngIf="d.login_by == 'email'">
+                  <!--NB-->
+                  <div class="participants__name" *ngIf="d.login_by == 'email' && this.site == 'NB'">
+                    <div class="label_detail text-color">Email&nbsp;<span class="required-title">*</span></div>
+                    <div class="input-data">
+                      <img src="assets/img/login_email.svg" class="input-img">
+                      <input type="text" placeholder="{{'nhap_email' | translate}}" [(ngModel)]="d.email">
+                    </div>
+                  </div>
+  
+                  <div class="participants__name" *ngIf="d.login_by == 'phone' && this.site == 'NB'">
+                    <div class="label_detail text-color">{{'user.phone' | translate}}&nbsp;<span class="required-title">*</span></div>
+                    <div class="input-data">
+                      <img class="input-img">
+                      <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.phone">
+                    </div>
+                  </div>
+
+                  
+               <!--KD-->
+                <div *ngIf="d.login_by === 'email' && this.site == 'KD'" class="participants__name">
                   <div class="label_detail text-color">Email&nbsp;<span class="required-title">*</span></div>
                   <div class="input-data">
                     <img src="assets/img/login_email.svg" class="input-img">
@@ -84,11 +102,22 @@
                   </div>
                 </div>
 
-                <div class="participants__name" *ngIf="d.login_by == 'phone'">
-                  <div class="label_detail text-color">Số điện thoại&nbsp;<span class="required-title">*</span></div>
+                <div *ngIf="d.login_by === 'phone' && this.site == 'KD'" class="participants__name">
+                  <div class="label_detail text-color">{{'user.phone' | translate}}&nbsp;<span class="required-title">*</span></div>
                   <div class="input-data">
-                    <img src="assets/img/login_email.svg" class="input-img">
-                    <input type="text" placeholder="{{'Nhập số điện thoại' | translate}}" [(ngModel)]="d.email">
+                    <img class="input-img">
+                    <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.email">
+                  </div>
+                </div>
+              </div>
+
+               <!--NB email-->
+               <div *ngIf="this.site == 'NB' && d.login_by === 'email'" class="participants--input" style="display: flex">
+                <div class="participants__name" style="width: 90%">
+                  <div class="label_detail text-color">{{'user.phone' | translate}}&nbsp;<div style="color: #ffc107;">({{'receive.contract.process' | translate}})</div></div>
+                  <div class="input-data">
+                    <img class="input-img">
+                    <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.phone">
                   </div>
                 </div>
               </div>
@@ -182,8 +211,9 @@
                 </div>
               </div>
 
-              <div class="participants--input" style="display: flex">
-                <div *ngIf="d.login_by === 'email' || !d.login_by" class="participants__name" style="width: 90%">
+               <!--KD-->
+               <div *ngIf="this.site == 'KD'" class="participants--input" style="display: flex">
+                <div *ngIf="d.login_by === 'email'" class="participants__name" style="width: 90%">
                   <div class="label_detail text-color">Email&nbsp;<span class="required-title">*</span></div>
                   <div class="input-data">
                     <img src="assets/img/login_email.svg" class="input-img">
@@ -192,10 +222,40 @@
                 </div>
 
                 <div *ngIf="d.login_by === 'phone'" class="participants__name" style="width: 90%">
-                  <div class="label_detail text-color">Số điện thoại&nbsp;<span class="required-title">*</span></div>
+                  <div class="label_detail text-color">{{'user.phone' | translate}}&nbsp;<span class="required-title">*</span></div>
+                  <div class="input-data">
+                    <img class="input-img">
+                    <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.email">
+                  </div>
+                </div>
+              </div>
+
+              <!--NB email-->
+              <div *ngIf="this.site == 'NB' && d.login_by === 'email'" class="participants--input" style="display: flex">
+                <div class="participants__name">
+                  <div class="label_detail text-color">Email&nbsp;<span class="required-title">*</span></div>
                   <div class="input-data">
                     <img src="assets/img/login_email.svg" class="input-img">
-                    <input type="text" placeholder="{{'Nhập số điện thoại' | translate}}" [(ngModel)]="d.email" oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
+                    <input type="text" placeholder="{{'nhap_email' | translate}}" [(ngModel)]="d.email">
+                  </div>
+                </div>
+
+                <div class="participants__name">
+                  <div class="label_detail text-color">{{'user.phone' | translate}}&nbsp;<div style="color: #ffc107;">({{'receive.contract.process' | translate}})</div></div>
+                  <div class="input-data">
+                    <img src="assets/img/login_email.svg" class="input-img">
+                    <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.phone">
+                  </div>
+                </div>
+              </div>
+
+              <!--NB phone-->
+              <div *ngIf="this.site == 'NB' && d.login_by === 'phone'" class="participants--input" style="display: flex">
+                <div class="participants__name" style="width:90%">
+                  <div class="label_detail text-color">{{'user.phone' | translate}}&nbsp;<span class="required-title">*</span></div>
+                  <div class="input-data">
+                    <img src="assets/img/login_email.svg" class="input-img">
+                    <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.email">
                   </div>
                 </div>
               </div>
@@ -267,9 +327,30 @@
                     </div>
               </div>
 
-              <div class="participants--input">
+              
+              <!--NB-->
+              <div  class="participants--input" style="display: flex" *ngIf="this.site == 'NB'">
+                <div class="participants__name">
+                  <div class="label_detail text-color">Email&nbsp;<span class="required-title">*</span></div>
+                  <div class="input-data">
+                    <img src="assets/img/login_email.svg" class="input-img">
+                    <input type="text" placeholder="{{'nhap_email' | translate}}" [(ngModel)]="d.email">
+                  </div>
+                </div>
+
+                <div class="participants__name">
+                  <div class="label_detail text-color">{{'user.phone' | translate}}&nbsp;<div style="color: #ffc107;">({{'receive.contract.process' | translate}})</div></div>
+                  <div class="input-data">
+                    <img class="input-img">
+                    <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.phone">
+                  </div>
+                </div>
+              </div>
+
+              <!--KD-->
+              <div  class="participants--input" style="display: flex" *ngIf="this.site == 'KD'">
                 <div class="participants__name" style="width: 90%">
-                   <div class="label_detail text-color">Email&nbsp;<span class="required-title">*</span></div>
+                  <div class="label_detail text-color">Email&nbsp;<span class="required-title">*</span></div>
                   <div class="input-data">
                     <img src="assets/img/login_email.svg" class="input-img">
                     <input type="text" placeholder="{{'nhap_email' | translate}}" [(ngModel)]="d.email">
@@ -384,7 +465,47 @@
                   </div>
                 </div>
 
-                <div class="participants--input" style="display: flex">
+                <!--NB email-->
+                <div *ngIf="this.site === 'NB' && d.login_by === 'email'" class="participants--input" style="display: flex">
+                  <div class="participants__name">
+                    <div class="label_detail text-color">{{'user.name' | translate}}&nbsp;<span class="required-title">*</span>
+                    </div>
+                    <div class="input-data" style="background-color: #f6f6f6;">
+                      <img src="assets/img/icon_name.svg" class="input-img">
+                      <input [id]="'signature-partner-' + d.ordering" type="text"
+                             placeholder="{{'nhap_ho_va_ten' | translate}}"
+                             [(ngModel)]="d.name" disabled>
+                    </div>
+                  </div>
+
+            
+                  <div class="participants__name" >
+                    <div class="label_detail text-color"></div>
+                    <div style="height: 40px; display: flex; align-items: center;">
+                      <input type="checkbox" style="width: 17px; height: 17px;" *ngIf="d.is_otp != 1" (change)="changeIsSmsReviewer($event, item, index)">
+                      <input type="checkbox" style="width: 17px; height: 17px;" *ngIf="d.is_otp == 1" checked (change)="changeIsSmsReviewer($event, item, index)">
+                      <div style="padding: 0 20px 0 5px">Nhận SMS thông báo khi xử lý hợp đồng</div>
+                    </div>
+                  </div>
+                </div>
+
+                <!--NB phone-->
+                <div *ngIf="this.site === 'NB' && d.login_by === 'phone'" class="participants--input" style="display: flex">
+                  <div class="participants__name" style="width: 90%
+                  ">
+                    <div class="label_detail text-color">{{'user.name' | translate}}&nbsp;<span class="required-title">*</span>
+                    </div>
+                    <div class="input-data" style="background-color: #f6f6f6;">
+                      <img src="assets/img/icon_name.svg" class="input-img">
+                      <input [id]="'signature-partner-' + d.ordering" type="text"
+                             placeholder="{{'nhap_ho_va_ten' | translate}}"
+                             [(ngModel)]="d.name" disabled>
+                    </div>
+                  </div>
+                </div>
+
+                <!--KD-->
+                <div *ngIf="this.site === 'KD'" class="participants--input" style="display: flex">
                   <div class="participants__name" style="width: 90%">
                     <div class="label_detail text-color">{{'user.name' | translate}}&nbsp;<span class="required-title">*</span></div>
                     <div class="input-data" style="background-color: #f6f6f6;">
@@ -405,6 +526,7 @@
             </div>
           </div>
 
+          <!--Người ký-->
           <div class="participants-border">
             <div class="label">{{'user.sign' | translate}}</div>
             <div class="participants--content" *ngFor="let d of getPartnerSignature(item); let index = index">
@@ -450,10 +572,8 @@
                     </div>
                   </div>
 
-                  <div class="participants__name">
-                    
+                  <div class="participants__name">   
                     <div class="label_detail text-color">{{'user.sign-type' | translate}}&nbsp;<span class="required-title">*</span></div>
-
                     <ng-multiselect-dropdown [(ngModel)]="d.sign_type" placeholder="{{'choose' | translate }}"
                                              [settings]="dropdownSignTypeSettings" [data]="isListSignNotPerson"
                                              (ngModelChange)="selectWithOtp($event, d)">
@@ -468,6 +588,16 @@
                       </ng-template>
                     </ng-multiselect-dropdown>                  
                   </div> 
+                </div>
+
+                <div *ngIf="this.site === 'NB' && d.login_by === 'email'" class="participants--input" style="display: flex">
+                  <div class="participants__name" style="width: 90%">
+                    <div style="height: 40px; display: flex; align-items: center;">
+                      <input type="checkbox" style="width: 17px; height: 17px;" *ngIf="d.is_otp != 1" (change)="changeIsSmsSignature($event, item, index)">
+                      <input type="checkbox" style="width: 17px; height: 17px;" *ngIf="d.is_otp == 1" [disabled]="getDataSignCka(d).length > 0" checked (change)="changeIsSmsSignature($event, item, index)">
+                      <div style="padding: 0 20px 0 5px">Nhận SMS thông báo khi xử lý hợp đồng</div>
+                    </div>
+                  </div>
                 </div>
               </div>
 
@@ -518,7 +648,16 @@
                         </div>
                       </ng-template>
                     </ng-multiselect-dropdown>
-                  
+                  </div>
+                </div>
+
+                <div *ngIf="this.site === 'NB' && d.login_by === 'email'" class="participants--input" style="display: flex">
+                  <div class="participants__name" style="width: 90%">
+                    <div style="height: 40px; display: flex; align-items: center;">
+                      <input type="checkbox" style="width: 17px; height: 17px;" *ngIf="d.is_otp != 1" (change)="changeIsSmsDocument($event, item, index)">
+                      <input type="checkbox" style="width: 17px; height: 17px;" *ngIf="d.is_otp == 1" [disabled]="getDataSignCka(d).length > 0" checked (change)="changeIsSmsDocument($event, item, index)">
+                      <div style="padding: 0 20px 0 5px">Nhận SMS thông báo khi xử lý hợp đồng</div>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -599,6 +738,17 @@
                     </ng-multiselect-dropdown>
                   </div>
                 </div>
+
+                <div *ngIf="this.site === 'NB' && d.login_by === 'email'" class="participants--input" style="display: flex">
+                  <div class="participants__name" style="width: 90%">
+                    <div style="height: 40px; display: flex; align-items: center;">
+                      <input type="checkbox" style="width: 17px; height: 17px;" *ngIf="d.is_otp != 1" (change)="changeIsSmsSignature($event, item, index)">
+                      <input type="checkbox" style="width: 17px; height: 17px;" *ngIf="d.is_otp == 1" [disabled]="getDataSignCka(d).length > 0" checked (change)="changeIsSmsSignature($event, item, index)">
+                      <div style="padding: 0 20px 0 5px">Nhận SMS thông báo khi xử lý hợp đồng</div>
+                    </div>
+                  </div>
+                </div>
+
               </div>
               <div *ngIf="getPartnerSignature(item).length > 1" class="col-md-1 delete-element"
                    (click)="deletePartnerSignature(index, item)">
