--- a/src/app/main/contract/detail-contract/detail-contract.component.html
+++ b/src/app/main/contract/detail-contract/detail-contract.component.html
@@ -4,31 +4,31 @@
     <div class="sample-contract__information--drag" id="width-element-info" style="margin-top: 15px">
       <div style="padding-bottom: 10px; text-align: center; font-weight: bold" class="label" (click)="t()">THÔNG TIN CHI TIẾT HỢP ĐỒNG</div>
       <div style="line-height: 25px">
-        <div>
+        <!-- <div>
           <span class="title-contract">Mã hợp đồng:</span>
           <span>{{datas?.is_data_contract?.contract_uid}}</span>
-        </div>
+        </div> -->
         <div>
-          <span class="title-contract">Loại hợp đồng:</span>
+          <span class="title-contract">{{'menu.contract.type.list' | translate}}:</span>
           <span>{{datas?.is_data_contract?.type_name}}</span>
         </div>
         <div>
-          <span class="title-contract">Tên hợp đồng:</span>
+          <span class="title-contract">{{'contract.name' | translate}}:</span>
           <span>{{datas.is_data_contract.name}}</span>
         </div>
         <div>
-          <span class="title-contract">Số hợp đồng:</span>
+          <span class="title-contract">{{'contract.number' | translate}}:</span>
           <span>{{datas.is_data_contract.contract_no}}</span>
         </div>
         <div>
-          <span class="title-contract">File đính kèm:</span>
+          <span class="title-contract">{{'file.attach' | translate}}:</span>
           <span *ngFor="let d of allFileAttachment;let i = index">
             <span *ngIf="i != 0">, </span>
             <a style="color: #106DB6" rel="stylesheet" [href]="d.path" target="_blank">{{d.filename}}</a>
           </span>
         </div>
         <div>
-          <span class="title-contract">Hợp đồng liên quan:
+          <span class="title-contract">{{'contract.connect' | translate}}:
           </span>
           <span *ngFor="let d of datas?.is_data_contract?.refs;let i = index">
             <span *ngIf="i != 0">, </span>
@@ -42,14 +42,14 @@
 
     <div class="location-change" [ngStyle]="changeDisplay()">
       <div class="sample-contract__information&#45;&#45;user-sign" style="line-height: 25px">
-        <div style="text-align: center; font-weight: bold" class="label">CÁC BÊN LIÊN QUAN</div>
+        <div style="text-align: center; font-weight: bold" class="label">{{'relate.party' | translate}}</div>
         <div *ngFor="let d of this.datas?.is_data_contract?.participants">
           <p>{{d.name}}</p>
         </div>
 
       </div>
       <div>
-        <u style="color: #106DB6; padding-right: 3px; cursor: pointer" (click)="processHandleContract()">Luồng xử lý hợp đồng</u>
+        <u style="color: #106DB6; padding-right: 3px; cursor: pointer" (click)="processHandleContract()">{{'contract_processing_flow' | translate}}</u>
       </div>
     </div>
   </div>
