--- a/src/app/main/contract-template/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract-template/shared/model/determine-signer/determine-signer.component.html
@@ -27,7 +27,7 @@
             <div class="col-md-10 participants__content--input" style="display: flex; flex-direction: column">
 
                  <!-- Chọn {{'Đăng nhập bằng email' | translate}} hoặc số điện thoại cho nguoi xem xet to chuc -->
-                 <div class="participants--input" style="display: flex">
+                 <!-- <div class="participants--input" style="display: flex">
                   <div class="participants__name">
                     <div class="label_detail text-color">
   
@@ -49,7 +49,7 @@
                       </div>
                     </div>
                   </div>
-                </div>
+                </div> -->
 
               <div class="participants--input" style="display: flex">
                 <div class="participants__name">
@@ -143,7 +143,7 @@
             <div class="col-md-10 participants__content--input" style="display: flex; flex-direction: column">
 
                <!-- Chọn {{'Đăng nhập bằng email' | translate}} hoặc số điện thoại cho nguoi ký to chuc -->
-               <div class="participants--input" style="display: flex">
+               <!-- <div class="participants--input" style="display: flex">
                 <div class="participants__name">
                   <div class="label_detail text-color">
 
@@ -165,7 +165,7 @@
                     </div>
                   </div>
                 </div>
-              </div>
+              </div> -->
 
               <div class="participants--input" style="display: flex">
                 <div class="participants__name">
@@ -441,7 +441,7 @@
               <div class="col-md-10 participants--input" style="display: flex; flex-direction: column">
 
                  <!--Chọn {{'Đăng nhập bằng email' | translate}} hoặc số điện thoại cho nguoi xem xet to chuc-->
-                 <div class="participants--input" style="display: flex">
+                 <!-- <div class="participants--input" style="display: flex">
                   <div class="participants__name">
                     <div class="label_detail text-color">
   
@@ -463,7 +463,7 @@
                       </div>
                     </div>
                   </div>
-                </div>
+                </div> -->
 
                 <!--NB email-->
                 <div *ngIf="this.site === 'NB' && d.login_by === 'email'" class="participants--input" style="display: flex">
@@ -536,7 +536,7 @@
               <div class="col-md-10 participants__content--input" style="display: flex; flex-direction: column">
 
                   <!--Chọn {{'Đăng nhập bằng email' | translate}} hoặc số điện thoại cho nguoi ky to chuc-->
-                  <div class="participants--input" style="display: flex">
+                  <!-- <div class="participants--input" style="display: flex">
                     <div class="participants__name">
                       <div class="label_detail text-color">
     
@@ -558,7 +558,7 @@
                         </div>
                       </div>
                     </div>
-                  </div>
+                  </div> -->
 
                 <div class="participants--input" style="display: flex">
                   <div class="participants__name">
@@ -685,7 +685,7 @@
               <div class="col-md-10 participants__content--input" style="display: flex; flex-direction: column;margin-bottom: 14px">
 
                   <!--Chọn {{'Đăng nhập bằng email' | translate}} hoặc số điện thoại cho nguoi xem xet to chuc-->
-                  <div class="participants--input" style="display: flex">
+                  <!-- <div class="participants--input" style="display: flex">
                     <div class="participants__name">
                       <div class="label_detail text-color">
     
@@ -707,7 +707,7 @@
                         </div>
                       </div>
                     </div>
-                  </div>
+                  </div> -->
 
                 <div class="participants--input" style="display: flex">
                   <div class="participants__name">
