--- a/src/app/main/contract/form-contract/party-contract-form/party-contract-form.component.html
+++ b/src/app/main/contract/form-contract/party-contract-form/party-contract-form.component.html
@@ -41,7 +41,7 @@
             />
             <div class="col-md-10 participants--input" style="display: flex; flex-direction: column">
 
-              <div class="participants--input" style="display: flex">
+              <!-- <div class="participants--input" style="display: flex">
                 <div class="participants__name">
                   <div class="label_detail text-color">
 
@@ -63,7 +63,7 @@
                     </div>
                   </div>
                 </div>
-              </div>
+              </div> -->
 
               <div class="participants--input" style="display: flex">
                 <div class="participants__name">
@@ -180,7 +180,7 @@
             >
 
                 <!--Chọn   {{'Đăng nhập bằng email' | translate}} hoặc số điện thoại với người ký tổ chức của tôi-->
-                <div class="participants--input" style="display: flex">
+                <!-- <div class="participants--input" style="display: flex">
                   <div class="participants__name">
                     <div class="label_detail text-color">
                       <div>
@@ -201,7 +201,7 @@
                       </div>
                     </div>
                   </div>
-                </div>
+                </div> -->
 
               <div class="participants--input" style="display: flex">
                 <div class="participants__name">
@@ -713,7 +713,7 @@
               />
               <div class="col-md-10 participants__content--input">
 
-                <div class="participants--input" style="display: flex">
+                <!-- <div class="participants--input" style="display: flex">
                   <div class="participants__name">
                     <div class="label_detail text-color">
   
@@ -735,7 +735,7 @@
                       </div>
                     </div>
                   </div>
-                </div>
+                </div> -->
 
                 <div class="participants--input">
                   <div class="participants__name">
@@ -841,7 +841,7 @@
                 class="col-md-10 participants__content--input"
                 style="display: flex; flex-direction: column"
               >
-              <div class="participants--input" style="display: flex">
+              <!-- <div class="participants--input" style="display: flex">
                 <div class="participants__name">
                   <div class="label_detail text-color">
 
@@ -863,7 +863,7 @@
                     </div>
                   </div>
                 </div>
-              </div>
+              </div> -->
 
                 <div class="participants--input" style="display: flex">
                   <div class="participants__name">
@@ -1237,7 +1237,7 @@
                 style="display: flex; flex-direction: column"
               >
 
-                <div class="participants--input" style="display: flex">
+                <!-- <div class="participants--input" style="display: flex">
                   <div class="participants__name">
                     <div class="label_detail text-color">
   
@@ -1259,7 +1259,7 @@
                       </div>
                     </div>
                   </div>
-                </div>
+                </div> -->
 
                 <div class="participants--input" style="display: flex">
                   <div class="participants__name">
